Fix horizontal scroll with overflow x hidden

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,6 +14,7 @@ html, body {
 body {
     font-size: 16px;
     background-color: white;
+    overflow-x: hidden;
   }
 
 body, h1, h2, h3, h4, h5, h6, p, ul {
